kubernetes/apps/media/tautulli/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: external.vaderrp.com
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/name: Tautulli
    gethomepage.dev/icon: tautulli.png
    gethomepage.dev/href: https://tautulli.vaderrp.com
    gethomepage.dev/pod-selector: app.kubernetes.io/name=tautulli
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-public
      namespace: network
  hostnames:
    - tautulli.vaderrp.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          port: 8181
